--- a/Assignments/Assignment1/Part2/Ziad_Theory.tex
+++ b/Assignments/Assignment1/Part2/Ziad_Theory.tex
@@ -88,6 +88,7 @@ Initially, it uses random sampling to gather a diverse set of actions from the s
 The MLP, designed to approximate the cost function, learns from this data, enabling it to make informed predictions about the costs of new actions.
 
 The main part of the algorithm lies in its iterative refinement process, where it selects new actions based on the MLP's cost predictions, rather than random sampling all $10,000$ actions like the baseline algorithm.
+The \texttt{select\textunderscore actions\textunderscore based\textunderscore on\textunderscore prediction} function in the algorithm does not directly contribute to the total number of actions evaluated against the 10,000-action limit, as it generates candidate actions and uses the model to predict their costs without actually evaluating these actions using the true cost function.
 This method represents a shift from exploration to exploitation by using the MLP's learned patterns to guide the search towards areas in the action space predicted to yield lower costs. 
 Selected actions are further refined through gradient descent, adjusting them in the direction that minimizes the predicted cost. 
 This approach ensures that the algorithm not only learns from its past experiences (initial random samples) but also actively makes it explore in a more focused manner to quickly find the optimal action.
