Starting with Question 3 writing

--- a/Assignments/Assignment3/Report/Ziad_HW3.tex
+++ b/Assignments/Assignment3/Report/Ziad_HW3.tex
@@ -66,4 +66,6 @@ in the second MCES version of the Blackjack game over 10,000 epsiodes (where eve
     \includegraphics[scale=0.5]{Q_values2.png}
 \end{center}
 %==================================================================================================
+section*{Question 3}
+%==================================================================================================
 \end{document}
