--- a/Assignments/Assignment3/Report/Ziad_HW3.tex
+++ b/Assignments/Assignment3/Report/Ziad_HW3.tex
@@ -53,19 +53,40 @@
 \section*{Question 1}
 Below is the plotting of $Q(\texttt{s,stick})$\\ 
 where $s\coloneq(\texttt{player total} = 18, \texttt{dealer showing} = 8, \texttt{no usable ace})$
-in the first MCES version of the Blackjack game over 10,000 epsiodes (where every 100th episode was recorded).
+in the first MCES version of the Blackjack game over 10,000 training epsiodes (where every 100th episode was recorded).
 \begin{center}
-    \includegraphics[scale=0.5]{Q_values.png}
+    \includegraphics[scale=0.4]{Q_values.png}
+\end{center}\par 
+Moreover, here are the winning, drawing, and losing rates of the first MCES version of the Blackjack game after 10,000 training episodes and then 100,000 testing episodes.
+\begin{center}
+    \includegraphics[scale=0.4]{MCES1_Wins_Draws_Losses.png}
 \end{center}
 %==================================================================================================
 \section*{Question 2}
 Below is the plotting of $Q(\texttt{s,stick})$\\ 
 where $s\coloneq(\texttt{player total} = 18, \texttt{dealer showing} = 8, \texttt{no usable ace})$
-in the second MCES version of the Blackjack game over 10,000 epsiodes (where every 100th episode was recorded).
+in the second MCES version of the Blackjack game over 10,000 training epsiodes (where every 100th episode was recorded).
 \begin{center}
-    \includegraphics[scale=0.5]{Q_values2.png}
+    \includegraphics[scale=0.4]{Q_values2.png}
+\end{center}\par 
+Moreover, here are the winning, drawing, and losing rates of the second MCES version of the Blackjack game after 10,000 training episodes and then 100,000 testing episodes.
+\begin{center}
+    \includegraphics[scale=0.4]{MCES2_Wins_Draws_Losses.png}
 \end{center}
 %==================================================================================================
-section*{Question 3}
+\section*{Question 3}
+Below is the plotting of $Q(\texttt{s,stick})$\\ 
+where $s\coloneq(\texttt{player total} = 18, \texttt{dealer showing} = 8, \texttt{no usable ace})$
+in the Q-learning version of the Blackjack game with $\alpha = 0.01$ and $\alpha=0.1$ over all 100,000 training epsiodes.
+\begin{center}
+    \includegraphics[scale=0.4]{Q_Blackjack_Alpha_0.01.png}
+    \includegraphics[scale=0.4]{Q_Blackjack_Alpha_0.1.png}
+\end{center}\par 
+Moreover, here are the winning, drawing, and losing rates of the Q-learning version of the Blackjack game with $\alpha = 0.01$ and $\alpha=0.1$ after 100,000 testing episodes with each 2000th training episode (total of 50 averages).
+\begin{center}
+    \includegraphics[scale=0.4]{Win_Draw_Loss_Rates_Alpha_0.01.png}
+    \includegraphics[scale=0.4]{Win_Draw_Loss_Rates_Alpha_0.1.png}
+\end{center}\par 
+
 %==================================================================================================
 \end{document}
